<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="filter_title">Select Appropriate Filter</string>
    <string name="mark_attendance_title">FILL DATA</string>
    <string name="view_attendance_title">VIEW ATTENDANCE HISTORY</string>
    <string name="select_grade">SELECT GRADE </string>
    <string name="mandatory">(MANDATORY)</string>
    <string name="select_class_section">SELECT SECTION</string>
    <string name="filter_clear">CLEAR ALL</string>
    <string name="filter_apply">RECORD DATA</string>
    <string name="filter_cross_content_desc">close filters</string>
    <string name="select_subject_stream">Select Subject Stream</string>
    <string name="valid_class_11_12">(Valid for Grades 11 and 12)</string>
    <string name="no_grade_selected">No Grade Selected</string>
    <string name="please_select_atleast_one_grade">Please select at least one grade to upload data</string>
    <string name="fetching_student_data">We are fetching student information</string>
    <string name="please_wait">Please wait ...</string>
    <string name="temp_value">%s &#xb0;F</string>
    <string name="sending_the_request">Uploading the Data</string>
    <string name="empty_t">___ &#xb0;F</string>
    <string name="no_data_filled_for_this_grade_section_filter_by_you_on_this_data">No data filled for this grade section filter by you on this data.</string>
    <string name="no_data_filled_for_this_grade_section_filter_by_you_on_this_data_1">No data found for this date.</string>
    <string name="day_selected_is_sunday_d">DAY SELECTED IS SUNDAY! :D</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="leave">Leave</string>
    <string name="present_on_duty">Present (On Duty)</string>
    <string name="working_from_home">Working From Home</string>
    <string name="on_training">On Training</string>
    <string name="others">Others</string>
    <string name="choose_employee_attendance_status">Choose Employee Attendance Status</string>
    <string name="attendance_status">Attendance Status</string>
    <string name="teacher_name_image">Teacher_Name_image</string>
    <string name="attendance">ATTENDANCE</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="enter_status">Enter Status</string>
    <string name="save">SAVE</string>
    <string name="could_add_student">Unable to add/update Shiksha Mitr Data</string>
    <string name="got_it">GOT IT</string>
    <string name="add_shiksha_mitr">REGISTER SHIKSHA MITR</string>
    <string name="update_shiksha_mitr">UPDATE SHIKSHA MITR DETAILS</string>
    <string name="student_name">Student Name *</string>
    <string name="srn_number">Student Registration Number (SRN) *</string>
    <string name="shiksha_mitra_name">Shiksha Mitr Name *</string>
    <string name="sm_mobile_number">Shiksha Mitr Contact Number *</string>
    <string name="sm_relation">Relation between Student and Shiksha Mitr *</string>
    <string name="sm_address">Shiksha Mitr Address</string>
    <string name="shiksha_mitr_details">SHIKSHA MITR DETAILS</string>
    <string name="update_details">UPDATE DETAILS</string>

    <string name="no_name_warning">Please enter Shiksha Mitr name</string>
    <string name="incorrect_phone_warning">Please enter a valid Phone number</string>
    <string name="failed_to_add_update_sm_details">There was an error in adding/updating Shiksha Mitr Details. Please try again.</string>
    <string name="select_sm_relation">Please choose relation between Student and Shiksha Mitr</string>
    <string name="sm_toehr_realtion_splaese_specify">Other Relations, Please specify *</string>
    <string name="send_attendance_message">Please ensure that you have entered the correct data for the students.</string>
</resources>
