<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="classFilterViewModel"
            type="com.example.student_details.viewmodels.ClassFilterViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:id="@+id/filter_header"
            android:layout_width="match_parent"
            android:layout_height="64dp">

            <ImageView
                android:id="@+id/filter_close_cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/filter_close_button_margin_left"
                android:contentDescription="@string/filter_cross_content_desc"
                android:padding="10dp"
                android:scaleType="center"
                android:src="@drawable/filter_close_icon" />

            <!--android:onClick="@{filterCollectionViewModel.onClose()}"-->
            <TextView
                android:id="@+id/filters_text"
                style="@style/filter_screen_header_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:text="@string/filter_title" />

        </RelativeLayout>

        <View
            android:id="@+id/filter_title_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/filter_header"
            android:background="@color/color3" />


        <include
            layout="@layout/filters_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttons"
            android:layout_below="@+id/filter_title_divider" />

        <View
            android:id="@+id/view_divider_buttons"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/buttons"
            android:background="@color/color3" />

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="@dimen/filter_buttons_size"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear_button"
                style="@style/ButtonStyleGrey"
                android:layout_width="157dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="12sp"
                android:letterSpacing="0.062"
                android:text="@string/filter_clear" />
            <!--android:onClick="@{filterCollectionViewModel.clearFilter()}"-->

            <Button
                android:id="@+id/apply_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="157dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/buttonstyle4_background_selected"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:letterSpacing="0.08"
                android:lineSpacingMultiplier="@fraction/line_spacing_medium"
                android:text="@string/filter_apply"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />
            <!--android:onClick="@{filterCollectionViewModel.applyFilter()}"-->
        </LinearLayout>


        <FrameLayout
            android:id="@+id/bleh_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</layout>